[package]
name = "guard-trait"
version = "0.2.1"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"
description = "Contains wrappers that allow memory to be protected using a guard, used mostly for safe io_uring memory abstractions."
documentation = "https://docs.rs/guard-trait"
readme = "README.md"
repository = "https://github.com/4lDO2/guard-trait-rs"
license = "MIT"
keywords = ["memory-management", "io_uring"]
categories = ["memory-management", "no-std"]
exclude = ["target"]

[features]
default = ["std"]
nightly = []
std = []

[dependencies]
stable_deref_trait = "1.2"
