[package]
name = "guard-trait"
version = "0.3.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"
description = "Contains fundamental wrappers for pointer types that can safely be shared in memory-sharing completion-based I/O interfaces"
documentation = "https://docs.rs/guard-trait"
readme = "README.md"
repository = "https://github.com/4lDO2/guard-trait-rs"
license = "MIT"
keywords = ["memory-management", "io_uring"]
categories = ["memory-management", "no-std"]
exclude = ["target"]

[features]
default = ["std"]
nightly = []
std = []

[dependencies]
stable_deref_trait = "1.2"
